--- a/views/partials/burgers/burgers-block.handlebars
+++ b/views/partials/burgers/burgers-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{devoured}}">
+	<button class="change-sleep" data-id="{{id}}" newSleepState="{{devoured}}">
 		{{#if devoured}}Uneaten!{{else}}Eat it!{{/if}}
 	</button> 
 
