--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,8 @@
-<h1></h1>
+<h1>
+<img src="http://cdn.onlinewebfonts.com/svg/img_478376.png" alt="" height="70" width="70"><img src="http://cdn.onlinewebfonts.com/svg/img_478376.png" alt="" height="70" width="70"><img src="http://cdn.onlinewebfonts.com/svg/img_478376.png" alt="" height="70" width="70">
 
+
+</h1>
 <h2>Uneaten Burgers</h2>
 
 <ul>
@@ -19,6 +22,7 @@
     {{/if}}
   {{/each}}
 </ul>
+
 
 <h2>Add a Burger</h2>
 <form class="create-form">
