--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,3 +18,11 @@ li {
     margin-bottom: 5px;
   }
   
+  body {
+    background-color: yellow;
+    
+  }
+
+  h1 {
+    background-image: center;
+  }
